# ffbPlayerDraftingApp

./: .gitignore  README.md  debug_config_load.py  diagnose_stats.py  diagnose_transform.py  gather_files.py  generate_cheatsheets.py  index.html  index.tsx  metadata.json  package-lock.json  package.json  requirements.txt  trace_adp_v2.py  trace_mapping_logic.py  verify_boost_math.py  verify_boosts_v2.py  vite.config.ts
backend/: README.md  cli.py  constants.py  debug_projections.py  debug_slug_matching.py  diagnose_projections.py  get_raw_players.py  league_config.json  league_config_alt.json  league_config_champions.json  league_config_guillotine.json  league_config_passion.json  league_config_rotate.json  league_config_vany.json  logging_config.py  models.py  player_alias_map.json  player_boost.json  player_mimics.json  pyproject.toml  raw.json  requirements.txt  settings.py  utils.py
backend/data/2025-08-05/: players_enriched.json  players_final.json  players_with_ppg.json  roster_players.json
backend/data/2025-08-07/: players_with_ppg.json  roster_players.json
backend/data/2025-08-08/: players_enriched.json  players_final.json  players_with_ppg.json  roster_players.json
backend/data/2025-08-09/: players_enriched.json  players_with_ppg.json  roster_players.json
backend/data_sources/: fantasypros.py  historical.py  sleeper.py  yahoo.py
backend/pipelines/: clean.py  enrich.py  ingest.py  stats.py  vor.py
backend/storage/: file_store.py
backend/transforms/: compute_ppg.py  compute_vor.py  filter_players.py  merge_stats.py  normalize.py
public/: vany.json  (+5 more)
(+26 files in other folders)
